--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,10 @@ h2 {
     border: 1px solid #eae6dd;
     padding: 8px;
     margin: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     /* float: left;
     width: 27.33%; */
 }
@@ -29,7 +33,8 @@ h2 {
 .flex-container {
     display: flex;
     position: relative;
-}
+
+} 
 
 .flex-container > div {
     flex-basis: 27.33%;
